--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,10 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'agency.tango.android:avatar-view:0.0.2'
+
+    // Glide for loading images
+    implementation 'agency.tango.android:avatar-view-glide:0.0.2'
 
     // Kotlin
     implementation("androidx.navigation:navigation-fragment-ktx:2.3.5")
